[gd_scene load_steps=2 format=3 uid="uid://shipyard"]

[ext_resource type="Script" path="res://scripts/shipyard.gd" id="1_shipyard"]

[node name="Shipyard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_shipyard")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.06, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.9, 0.85, 0.7, 1)
text = "SHIPYARD"

[node name="ShipNameLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.6, 0.6, 0.7, 1)
text = "Rustbucket Relic"

[node name="CreditsLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Credits: 1,000"

[node name="StatsBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="CargoStat" type="Label" parent="MarginContainer/VBoxContainer/StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Cargo: 18t"

[node name="FuelStat" type="Label" parent="MarginContainer/VBoxContainer/StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Fuel: 120/120"

[node name="BurnStat" type="Label" parent="MarginContainer/VBoxContainer/StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Burn: 2.0/ly"

[node name="ReliabilityStat" type="Label" parent="MarginContainer/VBoxContainer/StatsBar"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Reliability: 100%"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/StatsBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RepairButton" type="Button" parent="MarginContainer/VBoxContainer/StatsBar"]
custom_minimum_size = Vector2(180, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Repair (50 cr/pt)"

[node name="RefuelButton" type="Button" parent="MarginContainer/VBoxContainer/StatsBar"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Refuel (5 cr/unit)"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="UpgradeTreeContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="CargoPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/UpgradeTreeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CargoTree" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UpgradeTreeContainer/CargoPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="FuelPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/UpgradeTreeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FuelTree" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UpgradeTreeContainer/FuelPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="EnginePanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/UpgradeTreeContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EngineTree" type="VBoxContainer" parent="MarginContainer/VBoxContainer/UpgradeTreeContainer/EnginePanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MessageLabel" type="Label" parent="MarginContainer/VBoxContainer/Footer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
text = ""

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Back to Map"

[connection signal="pressed" from="MarginContainer/VBoxContainer/StatsBar/RepairButton" to="." method="_on_repair_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/StatsBar/RefuelButton" to="." method="_on_refuel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Footer/BackButton" to="." method="_on_back_pressed"]
